--- a/landingcss.css
+++ b/landingcss.css
@@ -16,8 +16,7 @@ header{
 #hero-logo{
     color: #f9faf8;
     font-size: 24px;
-    margin-top: 0.25em;
-
+    display: flex;
 }
 .logo-links{
     display: flex;
@@ -44,15 +43,16 @@ nav{
 
     
 }
-.hearder-sections button{
+ .hearder-sections button{
     position: relative;
     background-color: #3882fc;
     color: #f9faf8;
     border-radius: 5px;
-    width: 20%;
+    width: 25%;
     height: 30px;
     margin-top: 1em;
     cursor: pointer;
+    border: none;
   
 }
 .text-button{ 
@@ -69,7 +69,7 @@ h1{
 
 
 }
-.text-button p{
+.nav-text, .text-button p{
     font-size: 18px;
     color: #e2e7eb;
 }
@@ -84,9 +84,6 @@ h1{
 
 }
 img{ 
-    position: absolute;
-    top: 0.25%;
-    left: 15%;
     width: 35px;
     height: 35px;
     border-radius: 360px;
@@ -123,6 +120,7 @@ b{
     background: #e5e7eb;
     text-align: center;
     padding: 100px;
+    height: 300px;
 }
 .quote-area blockquote{
     font-size: 36px ;
@@ -131,10 +129,59 @@ b{
     
 }
  #quote-auth{
-    color: #000000;
-    text-align: left;    
+    color: #000000;   
     text-decoration: underline;
     position: absolute;
     right: 20%;
    font-size: 30px;
+}
+.call-action{
+    padding: 50px 25px 50px 25px;
+    display: flex;
+    justify-content: center;
+
+}
+.call-text1{
+    background: #3882fc;
+    /* text-align: center; */
+    padding: 25px 50px 25px 50px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    /* flex: 2; */
+ 
+    width: 500px;
+    
+}
+.call-text2{
+    background: #3882fc;
+    padding: 30px 50px 25px 0px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 250px;
+    /* flex: 1; */
+
+  
+}
+.call-text2 button{
+    position: relative;
+    background-color: #3882fc;
+    color: #f9faf8;
+    border-radius: 5px;
+    width: 60%;
+    height: 30px;
+    /* margin-top: 1em; */
+    cursor: pointer;
+    border: 2px solid #f9faf8;
+  
+}
+h2, .call-text1 p{
+    color: #f9faf8;
+}
+footer{
+    background: #1f2937;
+     color: #f9faf8;
+     height: 100px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
 }
